[project]
name = "ai-4190-408-mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
    "standard-imghdr>=3.13.0",
]
